@@ -291,7 +291,7 @@ CREATE TABLE vn (
   rgraph integer,
   c_released integer NOT NULL DEFAULT 0,
   c_languages language[] NOT NULL DEFAULT '{}',
-  c_platforms varchar(32) NOT NULL DEFAULT '',
+  c_platforms varchar NOT NULL DEFAULT '',
   c_popularity real,
   c_rating real,
   c_votecount integer NOT NULL DEFAULT 0,
