@@ -22,6 +22,7 @@
 	- Bugfix: check for validness of form arguments on /[uv]+/votes
 	- Bugfix: translate screen resolutions on release revision pages
 	- Bugfix: properly escape search query in links query string
+	- Bugfix: allow a VN to be available for more than 7 platforms
 	- Implemented permanent release/vn filters
 
 2.15 - 2010-12-15
